# Aegis

./: .claude-usage.json  .editorconfig  .gitignore  AEGIS_TASK_MANAGEMENT_IMPLEMENTATION.md  CLAUDE_DEVELOPMENT_PROOF.md  DELIVERABLES_SUMMARY.md  HACKATHON_SUBMISSION_READY.md  HARDWARE_QUICK_CHECKLIST.md  HARDWARE_QUICK_START.md  HARDWARE_SETUP_GUIDE.md  HARDWARE_STATUS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.txt  LICENSE  PHASE1_CHECKPOINT.md  PHASE32_FINAL.md  PHASE32_IMPLEMENTATION.md  PHASE32_READY.txt  PHASE32_STATUS.md  PHASE_2_CHANGES_SUMMARY.md  PHASE_2_FIXED.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  PHASE_2_VERIFICATION.md  QUICK_REFERENCE_CARD.md  README.md  RED_PHASE_COMPLETION_REPORT.txt  RED_PHASE_DELIVERABLES.md  START_HERE.md  SUBMISSION.md  TASK_MANAGEMENT_DEMO_GUIDE.md  TESTING_AND_CONNECTION_GUIDE.md  TESTING_GUIDE.md  dashboard_template.html  pyproject.toml  requirements.txt  research.md  test_terminal.py  verify_aegis_tasks.py
.claude/: ralph-loop.local.md
aegis/: .env.example  __init__.py  __main__.py  audio.py  audio_buffer.py  audio_feedback.py  claude_client.py  config.py  context.py  db.py  executor.py  main.py  models.py  observability.py  rate_limit.py  requirements.txt  stt.py  task_manager.py  tts.py
bridge/: .env.example  audio.py  audio_feedback.py  claude_client.py  config.py  context.py  db.py  esp32_config.py  gemini_client.py  llm_router.py  main.py  ollama_client.py  requirements.txt  stt.py  tts.py
docs/: BACKEND_VERIFICATION_REPORT.md  BRIDGE_VS_AEGIS.md  DATABASE_SCHEMA_GUIDE.md  ESP32_CONNECTION_AND_DEMO.md  EXPECTED_FAILURES.md  HARDWARE_CHECK.md  HARDWARE_INTEGRATION_ARCHITECTURE.md  HARDWARE_INTEGRATION_PLAN.md  HARDWARE_RED_PHASE.md  HARDWARE_SETUP_AND_TESTING.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_QUICK_REFERENCE.md  (+28 more)
(+58 files in other folders)
